# AI-Powered-Market-Intelligence-Agent-for-Product-Marketing-Teams

./: .env.example  .gitignore  AGENTS.md  DEMO_PLAYBOOK.md  DEMO_SCRIPT.md  EXPLAINER.md  README.md  claude.md  main.py  pyproject.toml
agents/: __init__.py  base.py  convergence_agent.py  conversational_agent.py  digest_agent.py  discovery_agent.py  dspy_optimizer.py  extraction_agent.py  hiring_signal_agent.py  intelligence_agent.py  matrix_agent.py  narrative_agent.py  research_agent.py  sentiment_agent.py  threat_scoring_agent.py
api/: app.py  routes.py
config/: feature_taxonomy.yaml  models.yaml  sources.yaml  stakeholders.yaml  thresholds.yaml
docs/: 01-technology-choices.md  02-research-topics.md  03-sota-advancements.md  04-project-aims.md  problem-statement.md
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/: nav.tsx
frontend/lib/: api.ts
observability/: __init__.py  logger.py  metrics.py  tracing.py
pipeline/: research_extraction_graph.py  supervisor.py
prompts/: __init__.py  conversational.py  extraction.py  intelligence.py  narrative.py  sentiment.py
schemas/: __init__.py  config.py  events.py  state.py
scripts/: e2e_demo.py  full_pipeline_demo.py  live_pipeline.py  minimal_smoke_test.py  smoke_test.py
storage/: __init__.py  cache.py  event_store.py  graph_store.py  vector_store.py
storage/migrations/: 001_vector_store.sql
tests/: conftest.py  test_errors.py  test_extraction_agent.py  test_narrative_agent.py  test_rss_crawler.py  test_schemas.py  test_threat_scoring.py
tools/: __init__.py  alpha_vantage.py  apify.py  companies_house.py  court_listener.py  crawler.py  edgar.py  embedder.py  errors.py  github_monitor.py  lens_patents.py  llm_adapter.py  mca21.py  open_secrets.py  rss_crawler.py  search.py  semantic_scholar.py  source_discovery.py
(+7 files in other folders)
