[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "api",
    "observability",
    "pipeline",
    "prompts",
    "schemas",
    "storage",
    "tools",
]

[project]
name = "market-intelligence-agent"
version = "0.1.0"
description = "AI-powered market intelligence agent for product marketing teams"
requires-python = ">=3.11"
dependencies = [
    # Core AI / LLM
    "anthropic>=0.40.0",
    "groq>=0.9.0",
    "instructor>=1.3.0",
    "openai>=1.30.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    # Structured data
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Web crawling / search
    "firecrawl-py>=1.0.0",
    "tavily-python>=0.3.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.2.0",
    # Storage
    "pymongo>=4.7.0",
    "motor>=3.4.0",
    "supabase>=2.4.0",
    "vecs>=0.4.0",
    "redis>=5.0.0",
    # Observability
    "langfuse>=2.25.0",
    "structlog>=24.1.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data processing
    "feedparser>=6.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    # Metrics
    "prometheus-client>=0.20.0",
    # Utilities
    "tenacity>=8.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.7.0",
    "apify-client>=3.0.2",
    "fastembed>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]
self-improve = [
    "dspy-ai>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
